--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button_toast"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Toast"
-        android:backgroundTint="@android:color/holo_purple" />
+        android:backgroundTint="@android:color/holo_green_dark" />
 
     <TextView
         android:id="@+id/show_count"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:text="0"
         android:textSize="160sp"
         android:gravity="center"
-        android:background="#FFFF00" />
+        android:background="#FFFF00"
+        android:layout_below="@id/button_toast"
+        android:layout_marginTop="30dp" />
 
     <Button
         android:id="@+id/button_count"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Count"
-        android:backgroundTint="@android:color/holo_purple" />
+        android:backgroundTint="@android:color/holo_green_dark"
+        android:layout_toRightOf="@id/button_toast"
+        android:layout_marginLeft="50dp" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_switchpage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch Page"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:layout_below="@id/show_count"
+        android:layout_marginTop="30dp"/>
+
+    <Button
+        android:id="@+id/button_browser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Browse Page"
+        android:backgroundTint="@android:color/holo_orange_light"
+        android:layout_below="@id/button_switchpage"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/button_contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open Contacts"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:layout_below="@id/button_browser"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/button_maps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Open Maps"
+        android:backgroundTint="@android:color/holo_green_light"
+        android:layout_below="@id/button_contact"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/button_call"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Call Number"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:layout_below="@id/button_maps"
+        android:layout_marginTop="20dp"/>
+
+
+
+
+</RelativeLayout>
